--- a/_sass/common/constants.scss
+++ b/_sass/common/constants.scss
@@ -3,5 +3,5 @@ $dark-secondary-color: #20364C;
 $dark-text-color: #ECF0F1;
 
 $light-primary-color: #fff;
-$light-secondary-color: #dcdde1;
+$light-secondary-color: #f7f7f7;
 $light-text-color: #000;
