fix favicon path

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Bruno Paulino">
     <meta name="description" content="I am a software engineer. Here I blog about programming and life experiences.">
     <meta name="theme-color" content="#21364B">
-    <link rel="shortcut icon" href="assets/favicon/favicon.ico">
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
