--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,15 +33,15 @@
     <div id="theme-switcher" data-moon="/assets/images/moon.svg" data-sun="/assets/images/sun.svg"></div>
     <script src="/assets/js/theme-switcher.js"></script>
     
-    {% if jekyll.environment == "production" %}
-        <!-- Google Analytics -->
+    <!-- Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66025495-5"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'UA-66025495-5');
+            if (!window.location.host.includes('localhost')) {
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+                gtag('config', 'UA-66025495-5');
+            }
         </script>
-    {% endif %}
   </body>
 </html>
