add courses page

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -130,3 +130,10 @@ html, body {
   align-items: center;
   justify-content: center;
 }
+
+.courses {
+  padding-bottom: 30px;
+  .course {
+    
+  }
+}
