--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,7 @@
     </p>
     <nav>
         <a href="/about">about</a>
+        <a href="/courses">courses</a>
         <a href="/work">work</a>
-        <a href="https://github.com/brunojppb">github</a>
-        <a href="https://stackoverflow.com/users/2301092/bruno-paulino">stack overflow</a>
     </nav>
 </div>
