--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
 <div class="entry-container">
     <div class="entry">
         <h1 class="entry-title">{{ page.title }}</h1>
+        <div style="text-align: center; font-style: italic;">{{ page.date | date: "%B %-d, %Y" }}</div>
     	{{ content }}
     </div>
     <script src="/assets/js/prism.js"></script>
