--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,6 @@
 @import "lib/normilize";
 @import "lib/prism";
+@import "common/font";
 @import "common/constants";
 @import "common/common";
 @import "common/navigation";
@@ -9,7 +10,6 @@
 @import "entries/entry_list";
 @import "entries/entry";
 
-@import "common/font_sans";
 
 * {
   box-sizing: border-box;
@@ -20,7 +20,7 @@
 }
 
 html, body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Futura PT',-apple-system,'BlinkMacSystemFont','Segoe UI','Roboto','Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans','Helvetica Neue','Arial',sans-serif;
   background-color: $dark-primary-color;
   color: $dark-text-color;
   position: relative;
