--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,9 @@
         I am a software engineer. Here I blog about programming and life experiences.
     </p>
     <nav>
-        <a href="/about">about</a>
+        <a href="/">blog</a>
         <a href="/courses">courses</a>
+        <a href="/about">about</a>
         <a href="/work">work</a>
     </nav>
 </div>
