use more readable color for dark-mode

--- a/_sass/common/constants.scss
+++ b/_sass/common/constants.scss
@@ -1,6 +1,6 @@
 $dark-primary-color: #0F2438;
 $dark-secondary-color: #20364C;
-$dark-text-color: #ECF0F1;
+$dark-text-color: #CCCCCC;
 
 $light-primary-color: #fff;
 $light-secondary-color: #f7f7f7;
