add pics to work page

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -119,6 +119,20 @@ html, body {
     margin-top: 30px;
     text-align: left;
   }
+
+  .job-item {
+    img {
+      display: block;
+      width: 100%;
+      max-width: 500px;
+      margin: auto;
+      border-radius: 4px;
+    }
+    &:last-child {
+      margin-bottom: 50px;
+    }
+  }
+
 }
 
 .not-found {
