--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="main-footer fixed-bottom">
     <div class="follow-container">
         <p>
-            Get in touch via my <a href="https://twitter.com/brunojppb">Twitter</a>
+            Get in touch via <a href="https://twitter.com/brunojppb">Twitter</a>
         </p>
         <span>
-            © 2018 Bruno Paulino
+            © 2019 Bruno Paulino
         </span>
     </div>
 </footer>
