add social network meta tags

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,43 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="programming,development,web,javascript,backend,scala,frontend,ios,api,rest">
+    {% assign keywords = "programming,development,web,javascript,backend,scala,frontend,ios,api,rest" %}
+    {% if page.keywords != blank %}
+        {% assign keywords = page.keywords %}
+    {% endif %}
+    {% assign meta_image = site.url | append: "/assets/images/me.jpg" %}
+    {% if page.meta_image != blank %}
+        {% assign meta_image = page.meta_image %}
+    {% endif %}
+    {% assign domain = site.url | replace: "https://", "" | replace: "http://", "" %}
+    {% assign absolute_url = site.url | append: page.url %}
+    {% assign meta_desc = "I am a software engineer. Here I blog about programming and life experiences." %}
+    {% if page.meta_description != blank %}
+        {% assign meta_desc = page.meta_description %}
+    {% endif %}
     <meta name="author" content="Bruno Paulino">
-    <meta name="description" content="I am a software engineer. Here I blog about programming and life experiences.">
+    <meta name="description" content="{{ meta_desc }}">
+    <meta name="keywords" content="{{ keywords }}">
     <meta name="theme-color" content="#21364B">
+    <!-- Open Graph tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="{{ absolute_url }}" />
+    <meta property="og:title" content="bpaulino.com | {{ page.title }}" />
+    <meta property="og:description" content="{{ meta_desc }}" />
+    <meta property="og:image" content="{{ meta_image }}" />
+
+    <!-- twitter card tags additive with the og: tags -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:domain" value="{{ domain }}" />
+    <meta name="twitter:title" value="bpaulino.com | {{ page.title }}" />
+    <meta name="twitter:description" value="{{ page.meta_description }}" />
+    <meta name="twitter:image" content="{{ meta_image }}" />
+    <meta name="twitter:url" value="{{ absolute_url }}" />
+    <meta name="twitter:label1" value="Created by" />
+    <meta name="twitter:data1" value="Bruno Paulino" />
+    <meta name="twitter:label2" value="Twitter" />
+    <meta name="twitter:data2" value="@brunojppb" />
+    
     <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
