remove meta prefix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,14 +24,14 @@
     <!-- Open Graph tags -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="{{ absolute_url }}" />
-    <meta property="og:title" content="bpaulino.com | {{ page.title }}" />
+    <meta property="og:title" content="{{ page.title }}" />
     <meta property="og:description" content="{{ meta_desc }}" />
     <meta property="og:image" content="{{ meta_image }}" />
 
     <!-- twitter card tags additive with the og: tags -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:domain" value="{{ domain }}" />
-    <meta name="twitter:title" value="bpaulino.com | {{ page.title }}" />
+    <meta name="twitter:title" value="{{ page.title }}" />
     <meta name="twitter:description" value="{{ page.meta_description }}" />
     <meta name="twitter:image" content="{{ meta_image }}" />
     <meta name="twitter:url" value="{{ absolute_url }}" />
