update header message and move font to the top of the css file

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,8 @@
     </a>
     <p>
         Hi, I am Bruno.<br/>
-        I am a software engineer. Here I blog about programming and life experiences.
+        Software is my craft.<br/>
+        I also read and draw quite extensively.
     </p>
     <nav>
         <a href="/">blog</a>
