add simple cache burst for CSS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css?{{site.time | date: '%s'}}">
   </head>
   <body>
 
