fix twitter handle

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="main-footer fixed-bottom">
     <div class="follow-container">
         <p>
-            Get in touch via <a href="https://twitter.com/brunojppb">Twitter</a>
+            Get in touch via <a href="https://twitter.com/bpaulino0">Twitter</a>
         </p>
         <span>
             © 2019 Bruno Paulino
