[ADD] add images Github actions post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
     <meta name="twitter:label1" value="Created by" />
     <meta name="twitter:data1" value="Bruno Paulino" />
     <meta name="twitter:label2" value="Twitter" />
-    <meta name="twitter:data2" value="@brunojppb" />
+    <meta name="twitter:data2" value="@bpaulino0" />
     
     <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
