update light color

--- a/_sass/common/constants.scss
+++ b/_sass/common/constants.scss
@@ -3,5 +3,5 @@ $dark-secondary-color: #20364C;
 $dark-text-color: #CCCCCC;
 
 $light-primary-color: #fff;
-$light-secondary-color: #f7f7f7;
+$light-secondary-color: #F3EFEC;
 $light-text-color: #303030;
