change font size

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,8 @@
         <h1>bpaulino.com</h1>
     </a>
     <p>
-        Hi, I am Bruno.<br/>
-        Software is my craft.<br/>
-        I also read and draw quite extensively.
+        Hi, I am Bruno Paulino.<br/>
+        Software is my craft.
     </p>
     <nav>
         <a href="/">blog</a>
