Blogpost about gatsbyJS and a little refactoring with local images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
     <meta property="og:image" content="{{ meta_image }}" />
 
     <!-- twitter card tags additive with the og: tags -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:domain" value="{{ domain }}" />
     <meta name="twitter:title" value="{{ page.title }}" />
     <meta name="twitter:description" value="{{ page.meta_description }}" />
