add particles effect to header container using canvas

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,16 @@
 <div class="main-header">
-    <a href="/">
-        <h1>bpaulino.com</h1>
-    </a>
-    <p>
-        Hi, I am Bruno Paulino.<br/>
-        Software is my craft.
-    </p>
-    <nav>
-        <a href="/">blog</a>
-        <a href="/courses">courses</a>
-        <a href="/about">about</a>
-        <a href="/work">work</a>
-    </nav>
+  <a href="/">
+    <h1>bpaulino.com</h1>
+  </a>
+  <p>
+    Hi, I am Bruno Paulino.<br />
+    Software is my craft.
+  </p>
+  <nav>
+    <a href="/">blog</a>
+    <a href="/courses">courses</a>
+    <a href="/about">about</a>
+    <a href="/work">work</a>
+  </nav>
+  <canvas class="particles-canvas"></canvas>
 </div>
