--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,6 +77,8 @@
     <div id="theme-switcher" data-moon="/assets/images/moon.svg" data-sun="/assets/images/sun.svg"></div>
     <script src="/assets/js/theme-switcher.js"></script>
 
+    <script src="/assets/js/particles.js"></script>
+
     <!-- Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66025495-5"></script>
         <script>
