--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -10,7 +10,6 @@
 @import "entries/entry_list";
 @import "entries/entry";
 
-
 * {
   box-sizing: border-box;
 }
@@ -19,14 +18,17 @@
   box-sizing: border-box;
 }
 
-html, body {
-  font-family: 'Futura PT',-apple-system,'BlinkMacSystemFont','Segoe UI','Roboto','Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans','Helvetica Neue','Arial',sans-serif;
+html,
+body {
+  font-family: "Futura PT", -apple-system, "BlinkMacSystemFont", "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", "Arial", sans-serif;
   background-color: $dark-primary-color;
   color: $dark-text-color;
   position: relative;
   height: 100%;
   //transition: color 0.5s;
-  input[type=submit] {
+  input[type="submit"] {
     color: $dark-text-color;
   }
 }
@@ -69,7 +71,7 @@ html, body {
   right: 12px;
   width: 30px;
   height: 30px;
-  background-image: url('/assets/images/moon.svg');
+  background-image: url("/assets/images/moon.svg");
   background-position: center;
   background-repeat: no-repeat;
   transition: all 0.4s;
@@ -90,7 +92,7 @@ html, body {
     color: $light-text-color;
   }
 
-  input[type=submit] {
+  input[type="submit"] {
     color: $light-text-color;
   }
 
@@ -122,7 +124,6 @@ html, body {
     margin-top: 30px;
     text-align: left;
   }
-
 }
 
 .job-item {
@@ -154,7 +155,8 @@ html, body {
 
 /** Custom Prism settings */
 /** support my custom font and size  */
-code.highlighter-rouge, code.highlighter-rouge.language-plaintext {
+code.highlighter-rouge,
+code.highlighter-rouge.language-plaintext {
   display: inline-block;
   font-family: inherit;
   font-size: inherit;
@@ -163,4 +165,15 @@ code.highlighter-rouge, code.highlighter-rouge.language-plaintext {
   padding: 0 8px;
   border-radius: 3px;
   line-height: 1.3;
+}
+
+.particles-canvas {
+  opacity: 0.8;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -10;
 }
