fix particle canvas

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -169,11 +169,8 @@ code.highlighter-rouge.language-plaintext {
 
 .particles-canvas {
   opacity: 0.8;
-  position: fixed;
+  position: absolute;
   left: 0;
-  right: 0;
   top: 0;
-  height: 100%;
-  width: 100%;
   z-index: -10;
 }
