use pure white on text while on dark theme

--- a/_sass/common/constants.scss
+++ b/_sass/common/constants.scss
@@ -1,7 +1,7 @@
 $dark-primary-color: #0F2438;
 $dark-secondary-color: #20364C;
-$dark-text-color: #CCCCCC;
+$dark-text-color: #FFFFFF;
 
-$light-primary-color: #fff;
+$light-primary-color: #FFFFFF;
 $light-secondary-color: #F3EFEC;
 $light-text-color: #222222;
