Add RSS Feed URL to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,7 @@
     <a href="/courses">courses</a>
     <a href="/about">about</a>
     <a href="/work">work</a>
+    <a href="/feed.xml">rss</a>
   </nav>
   <canvas class="particles-canvas"></canvas>
 </div>
