update profile picture

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     {% if page.keywords %}
         {% assign keywords = page.keywords %}
     {% endif %}
-    {% assign meta_image = site.url | append: "/assets/images/me.jpg" %}
+    {% assign meta_image = site.url | append: "/assets/images/bpaulino.jpg" %}
     {% if page.meta_image %}
         {% if page.meta_image contains "http" %}
             {% assign meta_image = page.meta_image %}
