use lighter font and improve readability

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
     <title>{{ page.title }}</title>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/styles.css?{{site.time | date: '%s'}}">
   </head>
   <body>
