--- a/_sass/entries/entry.scss
+++ b/_sass/entries/entry.scss
@@ -2,11 +2,10 @@
 
   .entry-title {
     text-align: center;
-    font-weight: 900;
   }
   .entry {
     width: 100%;
-    padding: 16px;
+    padding: 16px 0;
     text-align: left;
     box-sizing: border-box;
     line-height: 1.6;
