improve font color for readability on dark theme

--- a/_sass/common/constants.scss
+++ b/_sass/common/constants.scss
@@ -1,6 +1,6 @@
 $dark-primary-color: #0F2438;
 $dark-secondary-color: #20364C;
-$dark-text-color: #FFFFFF;
+$dark-text-color: #E4E4E4;
 
 $light-primary-color: #FFFFFF;
 $light-secondary-color: #F3EFEC;
