use CSS variables, finally

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,13 +72,13 @@
     <div class="fullscreen-overlay" style="display: none;">
         <button class="close-overlay">close</button>
     </div>
-    <script src="/assets/js/fullscreen-overlay.js"></script>
 
     <!-- Night/Light mode switch -->
     <div id="theme-switcher" data-moon="/assets/images/moon.svg" data-sun="/assets/images/sun.svg"></div>
-    <script src="/assets/js/theme-switcher.js"></script>
 
-    <script src="/assets/js/particles.js"></script>
+
+    <!-- All blog scripts -->
+    <script src="/assets/js/blog.js"></script>
 
     <!-- Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66025495-5"></script>
