--- a/_sass/common/footer.scss
+++ b/_sass/common/footer.scss
@@ -1,8 +1,6 @@
-@import "constants";
-
 .main-footer {
   text-align: center;
-  background-color: $dark-secondary-color;
+  background-color: var(--secondary-color);
   position: absolute;
   bottom: 0;
   width: 100%;
