--- a/_sass/common/common.scss
+++ b/_sass/common/common.scss
@@ -1,5 +1,3 @@
-@import "constants";
-
 h1 {
   font-size: 32px;
   font-weight: bold;
@@ -10,7 +8,7 @@ p {
 }
 
 a {
-  color: $dark-text-color;
+  color: var(--text-color);
 }
 
 /** screens >= 600px in width */
