add reading list

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
     <div class="follow-container">
         <p>
             Get in touch via <a href="https://twitter.com/bpaulino0">Twitter</a>
+            / follow my <a href="/feed.xml">RSS Feed.</a>
         </p>
         <span>
             © 2020 Bruno Paulino
