--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,6 +6,7 @@
 @import "home/home";
 @import "entries/entry_list";
 @import "entries/entry";
+@import "home/reading";
 
 :root {
   --primary-color: #0F2438;
