remove Google Analytics and add GoatCounter for privacy reasons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,15 +80,7 @@
     <!-- All blog scripts -->
     <script src="/assets/js/blog.js"></script>
 
-    <!-- Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66025495-5"></script>
-        <script>
-            if (!window.location.host.indexOf('localhost') !== -1) {
-                window.dataLayer = window.dataLayer || [];
-                function gtag(){dataLayer.push(arguments);}
-                gtag('js', new Date());
-                gtag('config', 'UA-66025495-5');
-            }
-        </script>
+    <!-- Privacy-first Analytics -->
+    <script data-goatcounter="https://bpaulino.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
   </body>
 </html>
