[WIP] playing around with SVG and animations with GreenSock for a new theme switcher

--- a/_sass/common/common.scss
+++ b/_sass/common/common.scss
@@ -50,3 +50,14 @@ input {
   height: 30px;
   padding-left: 5px;
 }
+
+.theme-switcher-new {
+  position: fixed;
+  left: 16px;
+  bottom: 16px;
+  width: 200px;
+  height: 200px;
+  &:hover {
+    cursor: pointer;
+  }
+}
