--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
         <div style="text-align: center; font-style: italic;">{{ page.date | date: "%B %-d, %Y" }}</div>
     	{{ content }}
     </div>
-    <script src="/assets/js/prism.js"></script>
+    <script src="/assets/js/lib/prism.js"></script>
     <script>
     	Prism.highlightAll();
     </script>
