fix accessibility issue on theme switcher

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,12 @@
     </div>
 
     <!-- Night/Light mode switch -->
-    <div id="theme-switcher" data-moon="/assets/images/moon.svg" data-sun="/assets/images/sun.svg"></div>
+    <button id="theme-switcher" 
+            aria-label="Toggle theme" 
+            title="Toggle theme" 
+            data-sun="/assets/images/sun.svg"
+            data-moon="/assets/images/moon.svg">
+    </button>
 
 
     <!-- All blog scripts -->
