--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
     </button>
 
 
-    <!-- All blog scripts -->
+    <!-- Minimal Blog scripts -->
     <script src="/assets/js/blog.js"></script>
 
     <!-- Privacy-first Analytics -->
