decouple theme switcher logic a bit more from decisions taken in the document about assets

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,8 +79,8 @@
     <button id="theme-switcher" 
             aria-label="Toggle theme" 
             title="Toggle theme" 
-            data-sun="/assets/images/sun.svg"
-            data-moon="/assets/images/moon.svg">
+            data-light-asset="/assets/images/sun.svg"
+            data-dark-asset="/assets/images/moon.svg">
     </button>
 
 
