Add DevOps post and fix minor typos

--- a/_sass/common/common.scss
+++ b/_sass/common/common.scss
@@ -17,11 +17,8 @@ a {
     font-size: 18px;
   }
 
-  ul {
-    li {
-      font-size: 18px;
-      font-weight: lighter;
-    }
+  ul li {
+    font-size: 18px;
   }
 }
 
@@ -32,9 +29,8 @@ a {
   }
 
   ul {
-    li {
+    ul li {
       font-size: 16px;
-      font-weight: lighter;
     }
   }
 }
