--- a/_sass/entries/entry.scss
+++ b/_sass/entries/entry.scss
@@ -1,5 +1,4 @@
 .entry-container {
-
   .entry-title {
     text-align: center;
   }
@@ -14,19 +13,35 @@
       font-weight: normal;
       padding-left: 24px;
       li + li {
-        margin-top: 8px;
+        margin-top: 4px;
       }
     }
 
     a {
-      transition: background-color 0.3s ease, 
-                  color 0.3s ease;
+      transition: background-color 0.3s ease, color 0.3s ease;
       border-radius: 4px;
       &:hover {
         background-color: var(--text-color);
         color: var(--secondary-color);
       }
+    }
 
+    blockquote {
+      background-color: var(--secondary-color);
+      margin: 0;
+      padding: 8px;
+      border-radius: 3px;
+      box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+        0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+      p:first-child {
+        margin-top: 0;
+      }
+      p:last-child {
+        margin-bottom: 0;
+      }
+      ul {
+        margin-bottom: 0;
+      }
     }
   }
 
