style blockquote before pseudo-element

--- a/_sass/entries/entry.scss
+++ b/_sass/entries/entry.scss
@@ -27,9 +27,20 @@
     }
 
     blockquote {
+      position: relative;
+      overflow: hidden;
+      ::before {
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        content: "";
+        width: 4px;
+        background-color: var(--text-color);
+      }
       background-color: var(--secondary-color);
       margin: 0;
-      padding: 8px;
+      padding: 8px 12px;
       border-radius: 3px;
       box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
         0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
