--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,8 +11,8 @@
 :root {
   --primary-color: #0F2438;
   --secondary-color: #20364C;
-  --text-color: #E4E4E4;
-  --progress-bar-color: #E4E4E4;
+  --text-color: #CFD2D6;
+  --progress-bar-color: #CFD2D6;
 }
 
 * {
