--- a/_sass/entries/entry_list.scss
+++ b/_sass/entries/entry_list.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 16px 32px 16px;
+  padding-bottom: 32px;
   .entry-item {
     margin-top: 32px;
     width: 100%;
