--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,16 +38,16 @@
     <!-- twitter card tags additive to og: meta properties -->
     <!-- See: https://developer.twitter.com/en/docs/twitter-for-websites/cards/overview/markup -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:domain" value="{{ domain }}" />
-    <meta name="twitter:title" value="{{ page.title }}" />
-    <meta name="twitter:description" value="{{ page.meta_description }}" />
+    <meta name="twitter:domain" content="{{ domain }}" />
+    <meta name="twitter:title" content="{{ page.title }}" />
+    <meta name="twitter:description" content="{{ page.meta_description }}" />
     <meta name="twitter:image" content="{{ meta_image }}" />
-    <meta name="twitter:url" value="{{ absolute_url }}" />
-    <meta name="twitter:creator" value="@bpaulino0" />
-    <meta name="twitter:label1" value="Created by" />
-    <meta name="twitter:data1" value="Bruno Paulino" />
-    <meta name="twitter:label2" value="Twitter" />
-    <meta name="twitter:data2" value="@bpaulino0" />
+    <meta name="twitter:url" content="{{ absolute_url }}" />
+    <meta name="twitter:creator" content="@bpaulino0" />
+    <meta name="twitter:label1" content="Created by" />
+    <meta name="twitter:data1" content="Bruno Paulino" />
+    <meta name="twitter:label2" content="Twitter" />
+    <meta name="twitter:data2" content="@bpaulino0" />
     
     
     <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
