add post about exponential backoff

--- a/_sass/entries/entry.scss
+++ b/_sass/entries/entry.scss
@@ -67,4 +67,11 @@
     display: block;
     margin: auto auto;
   }
+
+  // For mermaid JS diagrams
+  // generated for posts at:
+  // https://mermaid-js.github.io/mermaid-live-editor
+  img[src$="-diagram.svg"] {
+    background-color: white;
+  }
 }
