Add source code URL

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,9 @@
             Get in touch via <a href="https://twitter.com/bpaulino0">Twitter</a>
             / follow my <a href="/feed.xml">RSS Feed.</a>
         </p>
+
         <span>
-            © 2021 Bruno Paulino
-        </span>
+            © 2021 Bruno Paulino | <a style="font-size: 12px;" href="https://github.com/brunojppb/brunojppb.github.io">This website is open-source</a>
+        </span> 
     </div>
 </footer>
