--- a/_sass/entries/entry.scss
+++ b/_sass/entries/entry.scss
@@ -8,6 +8,7 @@
     text-align: left;
     box-sizing: border-box;
     line-height: 1.6;
+    hyphens: auto;
 
     ul {
       font-weight: normal;
