--- a/_sass/entries/entry_list.scss
+++ b/_sass/entries/entry_list.scss
@@ -7,7 +7,7 @@
 }
 
 .entries-center-wrapper {
-  max-width: 600px;
+  max-width: 800px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -23,7 +23,14 @@
     }
     .publish-date {
       display: block;
-      font-size: 14px;
+      font-size: 13px;
+      margin: 0 2px;
+      opacity: 0.6;
+    }
+
+    .desc {
+      margin: 6px 2px;
+      font-size: 15px;
     }
   }
 }
