Fix header links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,10 +7,10 @@
     Software is my craft.
   </p>
   <nav>
-    <a href="/">blog</a>
-    <a href="/courses">courses</a>
-    <a href="/about">about</a>
-    <a href="/reading">reading</a>
+    <a href="/">Blog</a>
+    <a href="/courses">Courses</a>
+    <a href="/about">About</a>
+    <a href="/reading">Reading</a>
   </nav>
   <canvas class="particles-canvas"></canvas>
 </div>
