Fix course page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,9 @@
   </p>
   <nav>
     <a href="/">Blog</a>
-    <a href="/courses">Courses</a>
     <a href="/about">About</a>
+    <a href="/courses">Courses</a>
+    <!-- <a href="/speaking">Speaking</a> -->
     <a href="/reading">Reading</a>
   </nav>
   <canvas class="particles-canvas"></canvas>
